fixed whitespace line in pre

--- a/iframe-cross-domain/css/main.less
+++ b/iframe-cross-domain/css/main.less
@@ -96,9 +96,8 @@ body
                 padding: 1px 5px;
             }
             pre{
-                code{
-                    border-left: 3px #333 solid;
-                }
+                padding: 10px;
+                border:1px dashed rgba(255,255,255,0.4);
             }
             code{
                 .courier;
